syntax = "proto3";

message ExpirationCompleteEvent {
    int64 order_id = 1;
}